--- a/configs/squid.conf
+++ b/configs/squid.conf
@@ -74,7 +74,7 @@ refresh_pattern .		0	20%	4320
 
 ssl_bump peek all
 ssl_bump splice all
-on_unsupported_protocol tunnel all
+#on_unsupported_protocol tunnel all
 
 acl all src 0.0.0.0/0
 http_access allow all
