typos on console lab, console link on readme, console links in bookbag navigation

--- a/docs/workshop/modules.yaml
+++ b/docs/workshop/modules.yaml
@@ -25,4 +25,7 @@ modules:
         exit_sign: Masquerade Networking
     masquerade:
         name: Masquerade Networking
+        exit_sign: CNV Console
+    console:
+        name: Using the console
         exit_sign: Finish Workshop
